Bug 1276562 - Hang when inserting a bulleted or numbered list into a contentEditable, r=yzen